Menubox little higher to prevent scrollbars from showing.
git-svn-id: https://secure.a-eskwadraat.nl/svn/domjudge/trunk@1333 caf94f87-7bd6-0310-88dc-dee8202e2269

--- a/www/style.css
+++ b/www/style.css
@@ -69,7 +69,7 @@ tr.unread td {
 #menubox {
 	border-width: 0px;
 	width: 100%;
-	height: 2.5em;
+	height: 2.7em;
 }
 
 #menutop a {
